bk_ida/gccida/g1/rebuild_jump_labels
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:545:4: error: expected ';' after expression
rtx i; // rax 
   ^
   ;
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:545:5: error: use of undeclared identifier 'i'
rtx i; // rax 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:564:23: error: operand of type 'rtunion' (aka 'union rtunion_def') where arithmetic or pointer type is required
v3.rtwint = ( __int64)rtx[3].fld[0]; 
                      ^~~~~~~~~~~~~
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:569:69: error: expected expression
if ( *( _BYTE *)( v4.rtwint + 2) == 13 && !reg_mentioned_p( *( rtx *)( v4.rtwint + 8), *( rtx *)&rtx[2]) ) 
                                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:569:96: error: expected expression
if ( *( _BYTE *)( v4.rtwint + 2) == 13 && !reg_mentioned_p( *( rtx *)( v4.rtwint + 8), *( rtx *)&rtx[2]) ) 
                                                                                               ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:578:7: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
      ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:578:40: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                       ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:578:43: error: use of undeclared identifier 'i'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                          ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:578:53: error: expected ')'
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
                                                    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:578:5: note: to match this '('
for ( i = cfun->expr->x_forced_labels; i; i = ( rtx)i[1] ) 
    ^
/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/jump.c:580:23: error: use of undeclared identifier 'i'
v6.rtwint = ( __int64)i->fld[0]; 
                      ^
10 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O1/gcc-gcc-O1/rebuild_jump_labels/src/obj/jump.o] Error 1
